--- a/DurandalCAMLGenerator/app/views/welcome.html
+++ b/DurandalCAMLGenerator/app/views/welcome.html
@@ -6,7 +6,7 @@
     <div class="alert alert-success">
       <h4>Read Me Please</h4>
         For this page to work, you will need to add this page to your browser's intranet zone, or navigate to the disconnected example.
-        You can also download the source code <a href="#">here</a> (coming soon).
+        <br />You can also download the source code or contribute <a href="https://github.com/benjblack/CAMLGenerator">at GitHub</a>.
     </div>
 
     <h3>Parameters</h3>
@@ -19,7 +19,6 @@
         <select id="lists" data-bind="foreach: spInfo.availableLists, value: spInfo.selectedList">
             <option data-bind="text: Title"></option>
         </select>
-
     </div>
 
     <div class="spaced">
@@ -28,14 +27,14 @@
         </select>
     </div>
 
-    <div class="spaced">
+    <div class="spaced" data-bind="if: spInfo.filterFields().length > 0 ">
         Boolean Operator<br />
         <select id="booleanOperator" data-bind="options: spInfo.booleanOperations, optionsText: 'Operator', value: spInfo.booleanOperator">
         </select>
     </div>
 
     <div class="spaced">
-        Filter<br />
+        <div data-bind="if: spInfo.filterFields().length > 0 ">Filter<br /></div>
         <table id="filterFields" data-bind="foreach: { data: spInfo.filterFields, as: 'field' }">
             <tr>
                 <td>
